--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ forge_version=14.23.5.2847
 mcp_mappings=stable_39
 
 #Cursforge Project ID (Required)
-cf_project_id=280547
+#cf_project_id=280547
 #Type of Release, can be one of 'alpha', 'beta' or 'release' (Defaults to 'alpha' if not set)
 cf_release_type=beta
 #When using a ChangeLog file specifies filename
