--- a/gradle.properties
+++ b/gradle.properties
@@ -1,87 +1,99 @@
-org.gradle.daemon=false
+# Mod properties.
+# The name of the author.
+mod_author=ProxyNeko
+# The mods name.
+mod_name=Proxy's Lib
+archiveBaseName=ProxysLib
+# The mods ID.
+mod_id=proxyslib
+# The version fo the mod we currently are.
+mod_version=1.2.0
+# Your website url reversed.
+group=cat.tophat
+# The vendor of the mod.
+vendor=tophatcat
 
-group=com.mcmoddev
-archivesBaseName=proxys-lib
-name=Proxys-Lib
-description=A lib for all things Proxy containing code used in other mods by ProxyNeko.
+# Uncomment this if you need to use access transformers. (Needs to be setup before use)
+#mod_at_file=accesstransformer
+# Uncomment this if you need to use core plugins. (Needs to be setup before use)
+#core_plugin=
 
-#Minumum Minecraft Version Mod will be built with
+# GitHub properties.
+# Your own website or the CurseForge URL.
+website_url=https://tophat.cat
+# The repo where the code is hosted.
+repo=tophatcats-mods/proxys-lib
+# Org name
+org_name=tophatcats-mods
+
+# CurseForge properties.
+# The CurseForge project ID.
+project_id=280547
+# The release type Can be: "alpha", "beta" or "release".
+release_type=release
+# Changelog type. (Text, html or markdown. Defaults to text if not set)
+changelog_type=markdown
+# Link to the change log.
+changelog=https://tophat.cat/proxys-lib/CHANGELOG.md
+# Version(s) of Minecraft this mod will work on (comma separated list)
+curseforge_versions=1.12.2
+# Whether to use a custom display name on artifacts
+curseforge_use_custom_display_name=true
+# List of required dependencies (comma separated list)
+#curseforge_requirements=
+# List of optional dependencies (comma separated list)
+#curseforge_optionals=
+# List of embedded dependencies (comma separated list)
+#curseforge_embeddeds=
+# List of compatible tools (comma separated list)
+#curseforge_tools=
+# List of incompatible dependencies (comma separated list)
+#curseforge_incompatibles=
+# List of included dependencies (comma separated list)
+#curseforge_includes=
+
+# Discord Webhook Properties.
+# Schoomp
+schoomp_version=1.1.0
+# The link to the curseforge page.
+curseforge_url=https://www.curseforge.com/minecraft/mc-mods/proxys-lib
+# CurseForge Discord Webhook. (This is usually stored on github as a project secret)
+#curseforge_webhook=
+
+# Forge properties.
+# The Minecraft version we want to mod for.
 mc_version=1.12.2
-#ForgeGradle version to use (Required)
-fg_version=2.3-SNAPSHOT
-#version of Minecraft Forge is built against (Required)
-forge_mc_version=1.12.2
-#Forge version to use (Required)
-forge_version=14.23.5.2847
-#Mappings version to use (Required)
-mcp_mappings=stable_39
+# The Forge build we need to mod.
+forge_version=14.23.5.2854
+# Mappings channel. Can be "snapshot" or "stable".
+mappings_channel=stable
+# Mapping version to use. yyyymmdd or number e.g. "54".
+mappings_version=39
+# MCP mappings, they are not always updated to the correct MC version...
+mappings_mc_version=1.12
 
-#Cursforge Project ID (Required)
-#cf_project_id=280547
-#Type of Release, can be one of 'alpha', 'beta' or 'release' (Defaults to 'alpha' if not set)
-cf_release_type=beta
-#When using a ChangeLog file specifies filename
-cf_changelog_filename=CHANGELOG.md
-#Changelog type, can be one of 'text', 'html' or 'markdown' (Defaults to 'text' if not set)
-cf_changelog_type=markdown
-#Version(s) of Minecraft this mod will work on (comma separated list)
-cf_versions=1.12.2
-#Whether to use a custom display name on artifacts
-cf_use_custom_display_name=true
-#List of required dependencies (comma separated list)
-#cf_requirements =
-#List of optional dependencies (comma separated list)
-#cf_optionals =
-#List of embedded dependencies (comma separated list)
-#cf_embeddeds =
-#List of compatible tools (comma separated list)
-#cf_tools =
-#List of incompatible dependencies (comma separated list)
-#cf_incompatibles =
-#List of included dependencies (comma separated list)
-#cf_includes =
-#String reference to Core Plugin this mod contains, if any
-#core_plugin =
-#Whether or not to use Access Transformers from depended mods
-dep_has_ats=false
-#File name of this mod's Access Transformers (If any)
-#at_file = _at.cfg
+# Dependencies. Set in scripts/dependencies.gradle with version strings here to keep things clean and easy.
+# Below are some examples.
+# Bookshelf.
+#bookshelf_version=1.15.2:5.6.40
+# JEI.
+#jei_version=1.15.2:6.0.2.12
+# Curios.
+#curios_version=1.15.2-2.0.2.6
 
-#Whether the artifacts should be signed
-do_sign_jar=true
+# Mod contained dependencies
+#mod_contained_deps=
 
-#Create a source jar?
-create_source_jar=true
-#Create an API jar?
+# Jar properties.
+# Should we create an API jar.
 create_api_jar=true
-#Create a deobf jar?
-create_deobf_jar=false
-#Create a javadoc jar?
+# Should we create a deobfuscated jar, this is kinda useless past 1.7.10.
+create_deobf_jar=true
+# Should we create a javadoc jar.
 create_javadoc_jar=true
+# Should we create a sources jar.
+create_sources_jar=true
 
-#The following four options are optional and do not affect your build in any way
-#They are only for convenience when using the 'runClient' and 'runServer' tasks
-#Whether to Disable server gui
-mc_server_nogui=true
-#Whether to Skip the screen to confirm that you want to load a world with missing registry entries
-#forge_do_not_backup = true
-#Whether to skip having to confirm on server
-#forge_query_result_confirm = true
-#Whether to Skip jansi warnings in the log
-#log4j_skip_jansi = true
-
-# Optional convenience setter for game resolution one of '480p', '576p', '720p', '1080p' or 'custom'
-#mc_resolution = 1080p
-#the following two will only be used when mc_resolution = custom
-#mc_custom_resolution_width = 1920
-#mc_custom_resolution_height = 1080
-#mc_fullscreen = true
-
-#Additional arguments to pass to minecraft.clientJvmArgs
-#client_jvm_args =
-#Additional arguments to pass to minecraft.serverJvmArgs
-#client_game_args =
-#Additional arguments to pass to minecraft.clientRunArgs
-#server_jvm_args =
-#Additional arguments to pass to minecraft.serverRunArgs
-#server_game_args =
+# Misc stuffs.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
