--- a/scripts/dependencies.gradle
+++ b/scripts/dependencies.gradle
@@ -30,7 +30,7 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${project.mc_version}-${project.forge_version}"
+    //minecraft "net.minecraftforge:forge:${project.mc_version}-${project.forge_version}"
     //Examples.
     //compile fg.deobf("net.darkhax.bookshelf:Bookshelf-${project.bookshelf_version}")
     //runtimeOnly fg.deobf("mezz.jei:jei-${project.jei_version}")
