--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ archiveBaseName=ProxysLib
 # The mods ID.
 mod_id=proxyslib
 # The version fo the mod we currently are.
-mod_version=1.2.0
+mod_version=2.0.0
 # Your website url reversed.
 group=cat.tophat
 # The vendor of the mod.
@@ -36,7 +36,7 @@ changelog_type=markdown
 # Link to the change log.
 changelog=https://tophat.cat/proxys-lib/CHANGELOG.md
 # Version(s) of Minecraft this mod will work on (comma separated list)
-curseforge_versions=1.12.2
+curseforge_versions=1.16.3
 # Whether to use a custom display name on artifacts
 curseforge_use_custom_display_name=true
 # List of required dependencies (comma separated list)
@@ -62,15 +62,15 @@ curseforge_url=https://www.curseforge.com/minecraft/mc-mods/proxys-lib
 
 # Forge properties.
 # The Minecraft version we want to mod for.
-mc_version=1.12.2
+mc_version=1.16.3
 # The Forge build we need to mod.
-forge_version=14.23.5.2854
+forge_version=34.1.25
 # Mappings channel. Can be "snapshot" or "stable".
-mappings_channel=stable
+mappings_channel=snapshot
 # Mapping version to use. yyyymmdd or number e.g. "54".
-mappings_version=39
+mappings_version=20200916
 # MCP mappings, they are not always updated to the correct MC version...
-mappings_mc_version=1.12
+mappings_mc_version=1.16.2
 
 # Dependencies. Set in scripts/dependencies.gradle with version strings here to keep things clean and easy.
 # Below are some examples.
