--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,30 +1,30 @@
 modLoader="javafml"
-loaderVersion="[34,)"
+loaderVersion="[37,)"
 license="LGPL-v2.1"
-updateJSONURL="https://tophat.cat/proxys-lib/update.json"
-issueTrackerURL="https://github.com/ProxyNeko/proxys-lib/issues"
-displayURL="https://www.curseforge.com/minecraft/mc-mods/proxys-lib"
+updateJSONURL="https://tophatcat.dev/kiris-lib/update.json"
+issueTrackerURL="https://github.com/TopHatCats-Mods/kiris-lib/issues"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/kiris-lib"
+credits="KiriCattus"
+authors="KiriCattus"
 #logoFile=""
-credits="ProxyNeko"
-authors="ProxyNeko"
 
 [[mods]]
-modId="proxyslib"
+modId="kirislib"
 version="${file.jarVersion}"
-displayName="Proxys Lib"
+displayName="Kiri's Lib"
 description='''
 A library mod for my other mods.
 '''
 
-[[dependencies.proxyslib]]
+[[dependencies.kirislib]]
    modId="forge"
    mandatory=true
-   versionRange="[34,)"
+   versionRange="[37,)"
    ordering="NONE"
    side="BOTH"
-[[dependencies.proxyslib]]
+[[dependencies.kirislib]]
    modId="minecraft"
    mandatory=true
-   versionRange="[1.16.3]"
+   versionRange="[1.17.1]"
    ordering="NONE"
    side="BOTH"
