--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,49 @@
-# The project information.
-group=dev.tophatcat
-mod_name=Kiri's Lib
-modid=kirislib
-author=KiriCattus
+# Project Properties.
+version=5.0.0
+group=dev.tophatcat.kirislib
+mod_name=KirisLib
+mod_id=kirislib
+mod_author=KiriCattus
+mod_credits=KiriCattus
 
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+# Common Properties.
+minecraft_version=1.19.2
+parchment_minecraft_version=1.19.2
+parchment_version=2022.09.18
+
+# Forge Properties.
+forge_version=43.1.25
+forge_ats_enabled=false
+
+# Quilt Properties.
+quilt_loader_version=0.17.5-beta.2
+qsl_version=3.0.0-beta.16
+quilted_fabric_api_version=4.0.0-beta.12+0.61.0
+quilt_aws_enabled=false
+
+# Gradle Properties.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-# Minecraft, Forge, and mappings versions
-mc_version=1.17.1
-forge_version=37.1.1
-mappings_channel=parchment
-mappings_version=2021.12.12-1.17.1
+# CurseForgeGradle Properties.
+curseforge_project_id=280547
+# Accepts "alpha", "beta" or "release".
+curseforge_release_type=release
+# The version of Java this file is marked for on CurseForge. (This property is never used by CurseForge but is still required)
+curseforge_java_version=Java 17
 
-# Logging markers and console logging level
-logging_markers=REGISTRIES
-logging_console=info
+# Misc Mod Properties.
+mod_license_id=LGPL-2.1
+mod_license_long=GNU Lesser General Public License v2.1
+mod_license=https://github.com/tophatcats-mods/kiris-lib/blob/dev/LICENSE.txt
+mod_discord=https://discord.tophatcat.dev
+mod_twitter=https://twitter.com/KiriCattus
+mod_source=https://github.com/tophatcats-mods/kiris-lib
+mod_update_url=https://tophatcat.dev/mods/updates/kiris-lib.json
+mod_homepage=https://curseforge.com/minecraft/mc-mods/kiris-lib
+mod_changelog_url=https://tophatcat.dev/mods/changelogs/kiris-lib.txt
+mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
+mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
 
-# Mixin properties.
-mixins_version=0.7-SNAPSHOT
-annotation_processor_version=0.8
-# Comment this out if you don't need mixins.
-#mixins_enabled=tru
+# Dependency Properties.
+modmenu_version=4.0.6
