--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ insert_final_newline = true
 charset = utf-8
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
+max_line_length = 120
 ij_java_use_single_class_imports = true
 ij_java_names_count_to_use_import_on_demand = 999
 ij_java_class_count_to_use_import_on_demand = 999
