--- a/gradle.properties
+++ b/gradle.properties
@@ -1,49 +1,48 @@
-# Project Properties.
-version=5.0.0
-group=dev.tophatcat.kirislib
-mod_name=KirisLib
+# Project related properties.
+mod_version=5.0.0
+mod_name=Kiris Lib
 mod_id=kirislib
-mod_author=KiriCattus
+mod_group=dev.tophatcat.kirislib
 mod_credits=KiriCattus
+mod_author=KiriCattus
+mod_homepage=https://tophatcat.dev/mods/kiris-lib
+mod_source=https://github.com/tophatcats-mods/kiris-lib
+mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
+mod_update_url=https://tophatcat.dev/mods/updates/kiris-lib.json
+mod_changelog_url=https://tophatcat.dev/mods/changelogs/kiris-lib.txt
+mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
+mod_license_id=LGPL-2.1
+mod_license_long=GNU Lesser General Public License v2.1
+mod_discord=https://discord.tophatcat.dev
 
-# Common Properties.
-minecraft_version=1.19.2
-parchment_minecraft_version=1.19.2
-parchment_version=2022.09.18
-
-# Forge Properties.
-forge_version=43.1.25
-forge_ats_enabled=false
-
-# Quilt Properties.
-quilt_loader_version=0.17.5-beta.2
-qsl_version=3.0.0-beta.16
-quilted_fabric_api_version=4.0.0-beta.12+0.61.0
+# Quilt properties
 quilt_aws_enabled=false
+minecraft_version=1.19.2
+quilt_mappings=21
+loader_version=0.18.1-beta.26
+# QSL version numer is shared between all the modules.
+qsl_version = 3.0.0-beta.25
+# Quilted Fabric API
+quilted_fabric_api_version = 4.0.0-beta.25+0.70.0
+
+# Modrinth properties.
+modrinth_project_id=xxxxxxxx
+# Can also be beta or alpha
+modrinth_release_type=release
+
+# CurseForge properties.
+curseforge_project_id=000000
+#Can accept "alpha", "beta" or "release".
+curseforge_release_type=release
+curseforge_mod_loader=Quilt
+curseforge_java_version=Java 17
 
 # Gradle Properties.
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+org.gradle.daemon=true
 
-# CurseForgeGradle Properties.
-curseforge_project_id=280547
-# Accepts "alpha", "beta" or "release".
-curseforge_release_type=release
-# The version of Java this file is marked for on CurseForge. (This property is never used by CurseForge but is still required)
-curseforge_java_version=Java 17
-
-# Misc Mod Properties.
-mod_license_id=LGPL-2.1
-mod_license_long=GNU Lesser General Public License v2.1
-mod_license=https://github.com/tophatcats-mods/kiris-lib/blob/dev/LICENSE.txt
-mod_discord=https://discord.tophatcat.dev
-mod_twitter=https://twitter.com/KiriCattus
-mod_source=https://github.com/tophatcats-mods/kiris-lib
-mod_update_url=https://tophatcat.dev/mods/updates/kiris-lib.json
-mod_homepage=https://curseforge.com/minecraft/mc-mods/kiris-lib
-mod_changelog_url=https://tophatcat.dev/mods/changelogs/kiris-lib.txt
-mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
-mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
-
-# Dependency Properties.
+# Dependencies are managed at gradle/libs.versions.toml
 modmenu_version=4.0.6
+
+
+
