--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+	maven {
+		name "TerraformersMC"
+		url "https://maven.terraformersmc.com/releases/"
+	}
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
@@ -44,6 +48,9 @@ dependencies {
 
     //Quilted Fabric API
     modImplementation "org.quiltmc.quilted-fabric-api:quilted-fabric-api:${quilted_fabric_api_version}-${minecraft_version}"
+
+	//Mod Menu dependency
+	modApi "com.terraformersmc:modmenu:${modmenu_version}"
 }
 
 loom {
