--- a/build.gradle
+++ b/build.gradle
@@ -192,10 +192,10 @@ license {
 }
 
 modrinth {
-    token = System.getenv("MODRINTH_TOKEN") // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
-    projectId = project.modrinth_project_id // This can be the project ID or the slug. Either will work!
+    token = System.getenv("MODRINTH_TOKEN") ?: "Invalid/No Modrinth API key could be found!" // This is the default. Remember to have the MODRINTH_TOKEN environment variable set or else this will fail, or set it to whatever you want - just make sure it stays private!
+    projectId = modrinth_project_id // This can be the project ID or the slug. Either will work!
     versionNumber = version // You don't need to set this manually. Will fail if Modrinth has this version already
-    versionType = project.modrinth_release_type // This is the default -- can also be `beta` or `alpha`
+    versionType = modrinth_release_type // This is the default -- can also be `beta` or `alpha`
     versionName = "${archivesBaseName}-${version}"
     changelog = project.mod_changelog_url
     uploadFile = remapJar // With Loom, this MUST be set to `remapJar` instead of `jar`!
@@ -206,11 +206,13 @@ modrinth {
         // The scope can be `required`, `optional`, `incompatible`, or `embedded`
         // The type can either be `project` or `version`
         required.project "qsl" // Creates a new required dependency on Fabric API
+		optional.project "modmenu"
     }
+	syncBodyFrom = rootProject.file("README.md").text
 }
 
 task publishToCurseForge(type: TaskPublishCurseForge) {
-    apiToken = project.findProperty("curseforge_api_token") ?: "invalid/no CurseForge API token found!"
+    apiToken = System.getenv("CURSEFORGE_TOKEN") ?: "Invalid/No CurseForge API key could be found!"
 
     def mainFile = upload(curseforge_project_id, file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
 
@@ -222,6 +224,7 @@ task publishToCurseForge(type: TaskPublishCurseForge) {
 
     //mainFile.addRequirement('fabric-api') //Fabric API slug
     //mainFile.addEmbedded('cloth-config') //Cloth Config slug
+	mainFile.addOptional('modmenu')
     mainFile.changelog = mod_changelog_url
 }
 
