--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ plugins {
     id 'net.darkhax.curseforgegradle' version '1.0.11'
 }
 
-archivesBaseName = mod_name
-version = "${mod_version}+${minecraft_version}"
+archivesBaseName = mod_id
+version = "${mod_version}-${minecraft_version}"
 group = mod_group
 
 repositories {
