--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,6 @@ mod_author=KiriCattus
 mod_homepage=https://tophatcat.dev/mods/kiris-lib
 mod_source=https://github.com/tophatcats-mods/kiris-lib
 mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
-mod_update_url=https://tophatcat.dev/mods/updates/kiris-lib.json
-mod_changelog_url=https://tophatcat.dev/mods/changelogs/kiris-lib.txt
 mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
 mod_license_id=LGPL-2.1
 mod_license_long=GNU Lesser General Public License v2.1
@@ -17,13 +15,13 @@ mod_discord=https://discord.tophatcat.dev
 
 # Quilt properties
 quilt_aws_enabled=false
-minecraft_version=1.19.3
-quilt_mappings=20
-loader_version=0.18.1-beta.64
+minecraft_version=1.19.4
+quilt_mappings=5
+loader_version=0.18.5
 # QSL version numer is shared between all the modules.
-qsl_version = 4.0.0-beta.10
+qsl_version=5.0.0-beta.1
 # Quilted Fabric API
-quilted_fabric_api_version = 5.0.0-beta.4+0.73.0
+quilted_fabric_api_version=6.0.0-beta.2+0.76.0
 
 # Modrinth properties.
 modrinth_project_id=M6agkTxA
@@ -34,7 +32,6 @@ modrinth_release_type=release
 curseforge_project_id=280547
 #Can accept "alpha", "beta" or "release".
 curseforge_release_type=release
-curseforge_mod_loader=Quilt
 curseforge_java_version=Java 17
 
 # Gradle Properties.
@@ -42,7 +39,4 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=true
 
 # Dependencies are managed at gradle/libs.versions.toml
-modmenu_version=5.0.2
-
-
-
+modmenu_version=6.1.0-rc.4
