--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ mod_id=kirislib
 mod_group=dev.tophatcat.kirislib
 mod_credits=KiriCattus
 mod_author=KiriCattus
-mod_homepage=https://tophatcat.dev/mods/kiris-lib
+mod_homepage=https://modrinth.com/mod/kirislib
+mod_cf=https://www.curseforge.com/minecraft/mc-mods/kiris-lib
 mod_source=https://github.com/tophatcats-mods/kiris-lib
 mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
 mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
@@ -13,15 +14,13 @@ mod_license_id=LGPL-2.1
 mod_license_long=GNU Lesser General Public License v2.1
 mod_discord=https://discord.tophatcat.dev
 
-# Quilt properties
-quilt_aws_enabled=false
-minecraft_version=1.19.4
-quilt_mappings=5
-loader_version=0.18.5
-# QSL version numer is shared between all the modules.
-qsl_version=5.0.0-beta.1
-# Quilted Fabric API
-quilted_fabric_api_version=6.0.0-beta.2+0.76.0
+# Fabric properties
+fabric_aws_enabled=false
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+fabric_loader_version=0.14.22
+# Fabric API version numer is shared between all the modules.
+fabric_api_version=0.86.1+1.20.1
 
 # Modrinth properties.
 modrinth_project_id=M6agkTxA
@@ -39,4 +38,4 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=true
 
 # Dependencies are managed at gradle/libs.versions.toml
-modmenu_version=6.1.0-rc.4
+modmenu_version=7.2.1
