Update to a new build and release system.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,10 @@ mod_id=kirislib
 mod_group=dev.tophatcat.kirislib
 mod_credits=KiriCattus
 mod_author=KiriCattus
-mod_homepage=https://modrinth.com/mod/kirislib
-mod_cf=https://www.curseforge.com/minecraft/mc-mods/kiris-lib
 mod_source=https://github.com/tophatcats-mods/kiris-lib
-mod_issue_tracker=https://github.com/tophatcats-mods/kiris-lib/issues
-mod_description=A library mod containing things that all my mods use to save time duplicating code that I already have.
-mod_license_id=LGPL-2.1
-mod_license_long=GNU Lesser General Public License v2.1
-mod_discord=https://discord.tophatcat.dev
+
+make_javadoc_jar=true
+make_sources_jar=true
 
 # Fabric properties
 fabric_aws_enabled=false
@@ -22,20 +18,9 @@ fabric_loader_version=0.14.22
 # Fabric API version numer is shared between all the modules.
 fabric_api_version=0.86.1+1.20.1
 
-# Modrinth properties.
-modrinth_project_id=M6agkTxA
-# Can also be beta or alpha
-modrinth_release_type=release
-
-# CurseForge properties.
-curseforge_project_id=280547
-#Can accept "alpha", "beta" or "release".
-curseforge_release_type=release
-curseforge_java_version=Java 17
+# Dependencies are managed at gradle/libs.versions.toml
+modmenu_version=7.2.1
 
 # Gradle Properties.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=true
-
-# Dependencies are managed at gradle/libs.versions.toml
-modmenu_version=7.2.1
