--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload assets to Modrinth and CurseForge
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          name: "${archivesBaseName}-${version}.jar"
+          name: ""
           version-type: release
           changelog-file: changelog.*
 
