Fix access wideners not being found

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 
 loom {
 	if (project.hasProperty('fabric_aws_enabled') && project.findProperty('fabric_aws_enabled').toBoolean()) {
-		accessWidenerPath = file("src/main/resources/${mod_id}.accessWidener")
+		accessWidenerPath = file("src/main/resources/${mod_id}.accesswidener")
 		project.logger.debug('Fabric Access Widener are enabled for this project!!!')
 	}
 	runs {
