Some bugfixes and corrections to version strings.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,17 @@
+# Gradle properties.
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=true
+
 # Project related properties.
-mod_version=5.0.0
+version=5.0.0
 mod_name=Kiris Lib
-mod_id=kirislib
-mod_group=dev.tophatcat.kirislib
-mod_credits=KiriCattus
+archives_base_name=kirislib
+maven_group=dev.tophatcat.kirislib
 mod_author=KiriCattus
 mod_source=https://github.com/tophatcats-mods/kiris-lib
 
+aws_enabled=false
 make_javadoc_jar=true
 make_sources_jar=true
 
-# Fabric properties
-fabric_aws_enabled=false
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
-fabric_loader_version=0.14.22
-# Fabric API version numer is shared between all the modules.
-fabric_api_version=0.86.1+1.20.1
-
 # Dependencies are managed at gradle/libs.versions.toml
-modmenu_version=7.2.1
-
-# Gradle Properties.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=true
