--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,22 @@
 pluginManagement {
-	repositories {
+    repositories {
+		maven {
+			name = 'Quilt'
+			url = 'https://maven.quiltmc.org/repository/release'
+		}
+
+        maven {
+            name = 'Sponge Snapshots'
+            url = 'https://repo.spongepowered.org/repository/maven-public/'
+        }
+
+		// Currently needed for Intermediary and other temporary dependencies
 		maven {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
 
-		maven {
-			name = 'Sponge Snapshots'
-			url = 'https://repo.spongepowered.org/repository/maven-public/'
-		}
-
-		mavenCentral()
-		gradlePluginPortal()
-	}
+        mavenCentral()
+        gradlePluginPortal()
+    }
 }
