--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,19 @@ import java.time.OffsetDateTime
 import java.time.ZoneOffset
 
 plugins {
-	id 'idea'
-	id 'eclipse'
-	id 'maven-publish'
-	id 'fabric-loom' version '1.3-SNAPSHOT'
-	id 'org.cadixdev.licenser' version '0.6.1'
+    id 'idea'
+    id 'eclipse'
+    id 'maven-publish'
+    alias libs.plugins.quilt.loom
+    id 'org.cadixdev.licenser' version '0.6.1'
 }
 
-archivesBaseName = mod_id
-version = "${minecraft_version}-${mod_version}"
-group = mod_group
+base {
+	archivesName = project.archives_base_name
+}
+
+version = "${libs.versions.minecraft.get()}-${project.version}"
+group = project.maven_group
 
 repositories {
 	// Add repositories to retrieve artifacts from in here.
@@ -19,113 +22,68 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	maven {
-		name "TerraformersMC"
-		url "https://maven.terraformersmc.com/releases/"
-	}
+    maven {
+        name "TerraformersMC"
+        url "https://maven.terraformersmc.com/releases/"
+    }
 
-	maven {
-		name "Forge Maven"
-		url "https://maven.minecraftforge.net/"
-	}
+    maven {
+        name "Forge Maven"
+        url "https://maven.minecraftforge.net/"
+    }
 
-	maven {
-		name "NeoForged Maven"
-		url "https://maven.neoforged.net/"
-	}
+    maven {
+        name "NeoForged Maven"
+        url "https://maven.neoforged.net/"
+    }
 
-	maven {
-		name "CurseMaven"
-		url "https://cursemaven.com"
-		content {
-			includeGroup "curse.maven"
-		}
-	}
+    maven {
+        name "CurseMaven"
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 
-	exclusiveContent {
-		forRepository {
-			maven {
-				name = "Modrinth"
-				url = "https://api.modrinth.com/maven"
-			}
-		}
-		filter {
-			includeGroup "maven.modrinth"
-		}
-	}
+    exclusiveContent {
+        forRepository {
+            maven {
+                name = "Modrinth"
+                url = "https://api.modrinth.com/maven"
+            }
+        }
+        filter {
+            includeGroup "maven.modrinth"
+        }
+    }
 }
 
 // All the dependencies are declared at gradle/libs.version.toml and referenced with "libs.<id>"
 // See https://docs.gradle.org/current/userguide/platforms.html for information on how version catalogs work.
 dependencies {
-	//The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-	minecraft "com.mojang:minecraft:${minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-
-	//Mod Menu dependency
-	modApi "com.terraformersmc:modmenu:${modmenu_version}"
-}
-
-loom {
-	if (project.hasProperty('fabric_aws_enabled') && project.findProperty('fabric_aws_enabled').toBoolean()) {
-		accessWidenerPath = file("src/main/resources/${mod_id}.accesswidener")
-		project.logger.debug('Fabric Access Widener are enabled for this project!!!')
+	minecraft libs.minecraft
+	//mappings "net.fabricmc:yarn:1.20.1+build.10:v2"
+	//mappings variantOf(libs.quilt.mappings) { classifier 'intermediary-v2' }
+	// Replace the above line with the block below if you want to use Mojang mappings as your primary mappings, falling back on QM for parameters and Javadocs
+	mappings loom.layered {
+		mappings "org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2"
+		officialMojangMappings()
 	}
-	runs {
-		client {
-			client()
-			setConfigName("Fabric Client")
-			ideConfigGenerated(true)
-			runDir("run")
+	modImplementation libs.quilt.loader
 
-			if (project.hasProperty('mc_uuid')) {
-				// Your UUID, trimmed / without the dashes
-				programArgs('--uuid', project.getProperty('mc_uuid'))
-			}
+	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
+	// Quilted Fabric API will automatically pull in the correct QSL version.
+	modImplementation libs.quilted.fabric.api
 
-			if (project.hasProperty('mc_username')) {
-				// Your Minecraft in-game username, not email
-				programArgs('--username', project.getProperty('mc_username'))
-			}
-		}
-
-		server {
-			server()
-			setConfigName("Fabric Server")
-			ideConfigGenerated(true)
-			runDir("runserver")
-			programArgs('--singleplayer', "yes", '--nogui', "true")
-		}
-
-		datagenClient {
-			inherit server
-			name "Data Generation"
-			vmArg "-Dfabric-api.datagen"
-			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
-			vmArg "-Dfabric-api.datagen.modid=${mod_id}"
-
-			runDir "build/datagen"
-		}
-	}
+	modApi libs.modmenu
+	modApi libs.jade
 }
 
 processResources {
-	def buildProps = project.properties.clone()
+	inputs.properties 'version': version, 'group': project.group
 
-	filesMatching(['fabric.mod.json']) {
-		expand buildProps
-	}
-}
-
-sourceSets {
-	main {
-		resources {
-			srcDirs += [
-				'src/main/generated'
-			]
-		}
+	filesMatching(['quilt.mod.json']) {
+		expand 'version': version, 'group': project.group
 	}
 }
 
@@ -141,37 +99,35 @@ java {
 	targetCompatibility = JavaVersion.VERSION_17
 
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task if it is present.
-	// If you remove this line, sources will not be generated.
 	if (project.hasProperty('make_sources_jar') && project.findProperty('make_sources_jar').toBoolean()) {
 		withSourcesJar()
 	}
 
 	// If this mod is going to be a library, then it should also generate Javadocs in order to aid with development.
-	// Uncomment this line to generate them.
 	if (project.hasProperty('make_javadoc_jar') && project.findProperty('make_javadoc_jar').toBoolean()) {
 		withJavadocJar()
 	}
 }
 
 var manifestAttributes = [
-	"Specification-Title"     : mod_name,
-	"Specification-Vendor"    : mod_author,
+	"Specification-Title"     : project.mod_name,
+	"Specification-Vendor"    : project.mod_author,
 	"Specification-Version"   : "1", // We are version 1 of ourselves
-	"Implementation-Title"    : mod_name,
+	"Implementation-Title"    : project.mod_name,
 	"Implementation-Version"  : project.jar.archiveVersion,
-	"Implementation-Vendor"   : mod_author,
+	"Implementation-Vendor"   : project.mod_author,
 	"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
 	"Built-On-Java"           : "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
-	"Build-On-Minecraft"      : minecraft_version
+	"Build-On-Minecraft"      : libs.versions.minecraft.get()
 ]
 
 jar {
 	filesMatching('LICENSE') {
-		rename '^(LICENSE.*?)(\\..*)?$', "\$1_${archivesBaseName}\$2"
+		rename { "${it}_${archivesBaseName}" }
 	}
 	manifest.attributes(manifestAttributes)
 	includeEmptyDirs false
-	preserveFileTimestamps = false
+	preserveFileTimestamps = true
 	reproducibleFileOrder = true
 }
 
@@ -192,20 +148,79 @@ publishing {
 	}
 }
 
+loom {
+	if (project.hasProperty('aws_enabled') && project.findProperty('aws_enabled').toBoolean()) {
+		accessWidenerPath = file("src/main/resources/${project.archives_base_name}.accesswidener")
+		project.logger.debug('Access Widener are enabled for this project!!!')
+	}
+	runs {
+		client {
+			client()
+			setConfigName("Minecraft Client")
+			ideConfigGenerated(true)
+			runDir("run")
+
+			if (project.hasProperty('mc_uuid')) {
+				// Your UUID, trimmed / without the dashes
+				programArgs('--uuid', project.getProperty('mc_uuid'))
+			}
+
+			if (project.hasProperty('mc_username')) {
+				// Your Minecraft in-game username, not email
+				programArgs('--username', project.getProperty('mc_username'))
+			}
+		}
+
+		server {
+			server()
+			setConfigName("Minecraft Server")
+			ideConfigGenerated(true)
+			runDir("run")
+			programArgs('--singleplayer', "yes", '--nogui', "true")
+		}
+
+		datagenClient {
+			inherit server
+			name "Data Generation"
+			vmArg "-Dfabric-api.datagen"
+			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+			vmArg "-Dfabric-api.datagen.modid=${project.archives_base_name}"
+
+			runDir "build/datagen"
+		}
+	}
+}
+
+sourceSets {
+	main {
+		resources {
+			srcDirs += [
+				'src/main/generated'
+			]
+		}
+	}
+}
+
 final var actualDateTime = OffsetDateTime.now(ZoneOffset.UTC).withNano(0)
 
 license {
-	ignoreFailures = false
-	header = project.file('LicenseHeader.txt')
-	include '**/*.java'
-	include '**/*.kt'
-	exclude '**/package-info.java'
-	exclude '**/module-info.java'
-	newLine = false
-	properties {
-		year = actualDateTime.getYear()
-		name = mod_name
-		source = mod_source
-		author = mod_author
-	}
+    ignoreFailures = false
+    header = project.file('LicenseHeader.txt')
+    include '**/*.java'
+    include '**/*.kt'
+    exclude '**/package-info.java'
+    exclude '**/module-info.java'
+    newLine = false
+    properties {
+        year = actualDateTime.getYear()
+        name = mod_name
+        source = mod_source
+        author = mod_author
+    }
+}
+
+// messy workaround for bug in quilt loom 1.3.3
+project.configurations.all {
+	exclude(group: "net.fabricmc", module: "fabric-loader")
+	exclude(group: "net.fabricmc.fabric-api")
 }
