--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,29 @@
-# Gradle properties.
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=true
+# Important Notes:
+# fabric.mod.json's modid field cannot be expanded, you must change it manually.
+# Every field you add must be added to the root build.gradle expandProps map.
 
-# Project related properties.
-version=5.0.0
-mod_name=Kiris Lib
-archives_base_name=kirislib
-maven_group=dev.tophatcat.kirislib
+# Project
+version=1.0.0
+group=dev.tophatcat.kirisutils
+
+# Common
+minecraft_version=1.20.2
+mod_name=Kiri's Utils
 mod_author=KiriCattus
-mod_source=https://github.com/tophatcats-mods/kiris-lib
+mod_id=kirisutils
+license=LGPL-v2.1
+credits=KiriCattus
+description=Kiri's Utilities, a mod for saving time and energy writing duplicate code all over the place.
+minecraft_version_range=[1.20.2,)
 
-aws_enabled=false
-make_javadoc_jar=true
-make_sources_jar=true
+# Fabric
+fabric_version=0.91.2+1.20.2
+fabric_loader_version=0.15.3
 
-# Dependencies are managed at gradle/libs.versions.toml
+# NeoForge
+neoforge_version=20.2.86
+neoforge_loader_version_range=[1,)
+
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
