--- a/settings.gradle
+++ b/settings.gradle
@@ -1,22 +1,32 @@
 pluginManagement {
-    repositories {
-		maven {
-			name = 'Quilt'
-			url = 'https://maven.quiltmc.org/repository/release'
-		}
-
-        maven {
-            name = 'Sponge Snapshots'
-            url = 'https://repo.spongepowered.org/repository/maven-public/'
-        }
-
-		// Currently needed for Intermediary and other temporary dependencies
+	repositories {
+		gradlePluginPortal()
 		maven {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
-
-        mavenCentral()
-        gradlePluginPortal()
-    }
+		maven {
+			name = 'NeoForge'
+			url = 'https://maven.neoforged.net/releases/'
+		}
+		maven {
+			name = 'Forge'
+			url = 'https://maven.minecraftforge.net/'
+		}
+		maven {
+			name = 'Sponge Snapshots'
+			url = 'https://repo.spongepowered.org/repository/maven-public/'
+		}
+	}
 }
+
+plugins {
+	id 'org.gradle.toolchains.foojay-resolver-convention' version '0.5.0'
+}
+
+// This should match the folder name of the project, or else IDEA may complain (see https://youtrack.jetbrains.com/issue/IDEA-317606)
+rootProject.name = 'kiris-utils'
+include("common")
+include("fabric")
+include("neoforge")
+
